[package]
name = "trx-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flurl = { tag = "0.4.0", git = "https://github.com/MyJetTools/fl-url.git" }
my-trx-lib = { tag = "0.1.0", git = "https://github.com/MyJetTools/my-trx-lib.git" }

async-trait = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
